Added currency to portfolio ammount

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -45,14 +45,20 @@
         <div class="flex justify-between">
             <div class="welcomecopy flex items-center space-x-4 mr-10">
                 <h1 class="text-black text-4xl font-bold">Total Portfolio Value:<br>$<span
-                        class="font-mono text-blue-700" id='portfolio-value'>32,599</span></h1>
+                        class="font-mono text-blue-700" id='portfolio-value'>00.00</span>
+                    <br>
+                    <span id='portfolio-currency'>(-)</span>
+                </h1>
             </div>
         </div>
     </div>
 
-    
+
 </body>
 
 <script src="../public/js/dashboard.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"></script>
+
 </html>
