--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -45,6 +45,11 @@
         </div>
     </div>
 
+    <div class="bg-white shadow-xl rounded-lg w-1/3" style="padding-left: 20px;">
+        <ul class="divide-y divide-gray-300" id='account-list'>
+        </ul>
+    </div>
+
 
 </body>
 
