--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -20,7 +20,7 @@
             </ul>
             <ul class="flex items-center">
                 <li>
-                    <h1 class="pl-8 lg:pl-0 text-gray-700">Coinbase Portfolio Tracker</h1>
+                    <h1 class="pl-8 lg:pl-0 text-black text-l font-bold">Coinbase Portfolio Tracker</h1>
                 </li>
             </ul>
             <!-- to bar right  -->
@@ -45,10 +45,20 @@
         </div>
     </div>
 
-    <div class="bg-white shadow-xl rounded-lg w-1/3" style="padding-left: 20px;">
-        <ul class="divide-y divide-gray-300" id='account-list'>
-        </ul>
+    <div class="grid grid-cols-2 gap-4">
+        <div>
+            <div class="bg-white shadow-xl rounded-lg w-100" style="padding-left: 20px;">
+                <ul class="divide-y divide-gray-300" id='account-list'>
+                </ul>
+            </div>
+        </div>
+
+        <div>
+            <canvas id="myChart" height="200" style="margin-top: -60px;"></canvas>
+        </div>
     </div>
+
+
 
 
 </body>
