--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -12,16 +12,12 @@
         <nav class="px-4 flex justify-between bg-white h-16 border-b-2">
             <!-- top bar left -->
             <ul class="flex items-center">
-                <li class="h-6 w-20">
-                    <img class="h-full w-full mx-auto"
-                        src="https://images.ctfassets.net/q5ulk4bp65r7/3TBS4oVkD1ghowTqVQJlqj/2dfd4ea3b623a7c0d8deb2ff445dee9e/Consumer_Wordmark.svg"
-                        alt="coinbase logo" />
+                <li>
+                    <h1 class="pl-8 lg:pl-0 text-xl font-bold text-blue-700">Coinbase Portfolio Tracker</h1>
                 </li>
             </ul>
             <ul class="flex items-center">
-                <li>
-                    <h1 class="pl-8 lg:pl-0 text-black text-l font-bold">Coinbase Portfolio Tracker</h1>
-                </li>
+
             </ul>
             <!-- to bar right  -->
             <ul class="flex items-center">
@@ -32,15 +28,68 @@
         </nav>
     </div>
 
-
-    <div class="max-auto  px-8 py-12 bg-white">
-        <div class="flex justify-between">
-            <div class="welcomecopy flex items-center space-x-4 mr-10">
-                <h1 class="text-black text-4xl font-bold">Total Portfolio Value:<br>$<span
-                        class="font-mono text-blue-700" id='portfolio-value'>00.00</span>
-                    <br>
-                    <span id='portfolio-currency'>(-)</span>
-                </h1>
+    <div class="grid grid-cols-2 gap-4">
+        <div>
+            <div class="max-auto  px-8 py-12 bg-white">
+                <div class="flex justify-between">
+                    <div class="welcomecopy flex items-center space-x-4 mr-10">
+                        <h1 class="text-black text-4xl font-bold">Total Portfolio Value:<br>$<span
+                                class="font-mono text-blue-700" id='portfolio-value'>00.00</span>
+                            <br>
+                            <span id='portfolio-currency'>(-)</span>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="grid grid-cols-2 gap-4">
+                <div>
+                    <div class="relative bg-white py-6 px-6 rounded-3xl w-64 my-4 shadow-xl">
+                        <div
+                            class=" text-white flex items-center absolute rounded-full py-4 px-4 shadow-xl bg-green-500 left-4 -top-0">
+                            <!-- svg  -->
+                            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z" />
+                            </svg>
+                        </div>
+                        <div class="grid grid-cols-4 mt-8 flex" style="padding-top: 10px;">
+                            <div class="col-span-1">
+                                <p class="text-xl font-semibold flex my-2">P/L</p>
+                            </div>
+                            <div class="col-span-3">
+                                <p class="text-xl font-semibold text-green-600 word-break: normal; my-2"> + $ 4,200.96
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="relative bg-white py-6 px-6 rounded-3xl w-64 my-4 shadow-xl">
+                        <div
+                            class=" text-white flex items-center absolute rounded-full py-4 px-4 shadow-xl bg-blue-500 left-4 -top-0">
+                            <!-- svg  -->
+                            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z" />
+                            </svg>
+                        </div>
+                        <div class="grid grid-cols-5 gap-2 mt-8 flex" style="padding-top: 10px;">
+                            <div class="col-span-2">
+                                <p class="text-xl font-semibold flex my-2">% P/L</p>
+                            </div>
+                            <div class="col-span-3">
+                                <p class="text-xl font-semibold text-green-600 word-break: normal; my-2"> + 2400%
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -54,7 +103,7 @@
         </div>
 
         <div>
-            <canvas id="myChart" height="200" style="margin-top: -60px;"></canvas>
+            <canvas id="myChart" height="200" style="margin-top: -40px;"></canvas>
         </div>
     </div>
 
